Began transition from html to mdx

--- a/src/pages/posts/q_learning.mdx
+++ b/src/pages/posts/q_learning.mdx
@@ -1,26 +1,15 @@
-<!DOCTYPE html>
-<html lang="en-US">
+---
+layout: ../../layouts/PostLayout.astro
+title: 'Q-learning (School project)'
+date: 2022-07-01
+description: 'This is the first post of my new Astro blog.'
+link: null
+tags: ["astro", "blogging", "learning in public"]
+---
 
-	<head>
-		<title>Tristan Bony - Software Engineering Student</title>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="./style.css" />
-		<link rel="icon" href="./assets/images/favicon.ico" />
-	</head>
+## {title}
 
-	<body>
-		<header>
-			<a href="./index.html">
-				<img src="./assets/images/Logo_TristanB_v3.jpg" alt="Tristan Bony" class="logo" />
-				<h1>Tristan Bony</h1>
-			</a>
-		</header>
-
-        <section id="project">
-			<h2>Q-learning (School project)</h2>
-			<hr />
-            <p>
+<p>
 				This is the project we had to do at the end of our first year of engineering school in teams of 3. The goal was to build a game using the C language and SDL2 and then build a Q-learning algorithm (here: double-Q-learning) to learn solving the game.
 			</p>
 			<figure>
@@ -46,12 +35,3 @@
 				<img src="./assets/images/q_learning/player_mode.png" alt="player mode" />
 				<figcaption>Images of the player mode with updated graphics.</figcaption>
 			</figure>
-        </section>
-        
-        <footer>
-			<p>&copy; <span id="year"></span> Tristan Bony</p>
-		</footer>
-
-		<script src="./script.js"></script>
-	</body>
-</html>
