Fixed links + improved markdown formatting + cleaning

--- a/src/pages/posts/anniminder.mdx
+++ b/src/pages/posts/anniminder.mdx
@@ -9,18 +9,28 @@ tags: ["astro", "blogging", "learning in public"]
 
 ## {title}
 
-<p>This project is a reminder of birthdays for Discord servers.</p>
-<p>I started this project when I found people were missing other people's birthday because they were storing it in plain text in a dedicated channel and often people were missing it.</p>
-<p>I used Python for the base of the project (with discord.py API wrapper) and SQL to store data in a SQLite database.</p>
-<p>The usage of the bot is very basic since it uses Discord slash commands.<br />
-When the bot is added in a new server, an ephemeral message is sent which explains how the bot works.<br />
-Moreover, when a new user joins a server with Anniminder in it, he will receive a private message to be informed of the functioning of the bot.</p>
-<p>To resume the available commands:
-<ul>
-    <li><i>/help</i> shows the help command with every information</li>
-    <li><i>/set_channel [channel]</i> is used to defined a specific channel to sent birthday messages in (available only to administrator)</li>
-    <li><i>/add_birthday [year] [month] [day]</i> is used by the users to add or modify their birthday. A confirmation is sent afterward as an ephemeral message</li>
-    <li><i>/remove_birthday</i> can be used by a user who no longer wants to be stored</li>
-    <li><i>/get_birthday [user]</i> is used by anyone who wants to know the birthday of someone else</li>
-</ul></p>
-<p>Finally, when a bot is deleted from a server or when a user leaves a server, every information related to them is removed.</p>
+This project is a reminder of birthdays for Discord servers.
+
+
+I started this project when I found people were missing other people's birthday because they were storing it in plain text in a dedicated channel and often people were missing it.
+
+
+I used Python for the base of the project (with discord.py API wrapper) and SQL to store data in a SQLite database.
+
+
+The usage of the bot is very basic since it uses Discord slash commands.
+
+When the bot is added in a new server, an ephemeral message is sent which explains how the bot works.
+
+Moreover, when a new user joins a server with Anniminder in it, he will receive a private message to be informed of the functioning of the bot.
+
+
+To resume the available commands:
+- */help* shows the help command with every information
+- */set_channel [channel]* is used to defined a specific channel to sent birthday messages in (available only to administrator)
+- */add_birthday [year] [month] [day]* is used by the users to add or modify their birthday. A confirmation is sent afterward as an ephemeral message
+- */remove_birthday* can be used by a user who no longer wants to be stored
+- */get_birthday [user]* is used by anyone who wants to know the birthday of someone else
+
+
+Finally, when a bot is deleted from a server or when a user leaves a server, every information related to them is removed.
