--- a/src/pages/posts/logos.mdx
+++ b/src/pages/posts/logos.mdx
@@ -9,5 +9,7 @@ tags: ["astro", "blogging", "learning in public"]
 
 ## {title}
 
-<p>One of the first thing I did with a computer is drawing. When I learned about advanced tools, I started making logos for my own use for fun. I do not consider myself an artist, quite the contrary, but I like my ideas and what I have done with them. What follows are my attempts to do logos for different reasons.</p>
+One of the first thing I did with a computer is drawing. When I learned about advanced tools, I started making logos for my own use for fun. I do not consider myself an artist, quite the contrary, but I like my ideas and what I have done with them. What follows are my attempts to do logos for different reasons.
+
+
 <!--Add logos with context-->
