--- a/src/pages/posts/anniminder.mdx
+++ b/src/pages/posts/anniminder.mdx
@@ -26,11 +26,11 @@ Moreover, when a new user joins a server with Anniminder in it, he will receive 
 
 
 To resume the available commands:
-- */help* shows the help command with every information
-- */set_channel [channel]* is used to defined a specific channel to sent birthday messages in (available only to administrator)
-- */add_birthday [year] [month] [day]* is used by the users to add or modify their birthday. A confirmation is sent afterward as an ephemeral message
-- */remove_birthday* can be used by a user who no longer wants to be stored
-- */get_birthday [user]* is used by anyone who wants to know the birthday of someone else
+- `/help` shows the help command with every information
+- `/set_channel [channel]` is used to defined a specific channel to sent birthday messages in (available only to administrator)
+- `/add_birthday [year] [month] [day]` is used by the users to add or modify their birthday. A confirmation is sent afterward as an ephemeral message
+- `/remove_birthday` can be used by a user who no longer wants to be stored
+- `/get_birthday [user]` is used by anyone who wants to know the birthday of someone else
 
 
 Finally, when a bot is deleted from a server or when a user leaves a server, every information related to them is removed.
