--- a/src/pages/posts/my_website_v4.mdx
+++ b/src/pages/posts/my_website_v4.mdx
@@ -12,16 +12,10 @@ tags: ["astro", "blogging", "learning in public"]
 This is the fourth version of my website I designed entirely. There was an introduction of myself, logos I made and photographs I took throughout my trips. There was also a link to Electrogen', a tech news website where I was an editor.
 
 
-<figure>
-    <img src="./assets/images/my_website_v4/Screen_TristanB_en.png" alt="My website v4" />
-    <figcaption>Glimpse of what it looked like.</figcaption>
-</figure>
+![My website v4](/assets/images/my_website_v4/Screen_TristanB_en.png "Glimpse of what it looked like.")
 
 
 It was also the first time I tried to make it responsive, so that the UI changed for tablet users and mobile users.
 
 
-<figure>
-    <img src="./assets/images/my_website_v4/Screen_responsive.png" alt="My website v4 responsive" />
-    <figcaption>How it looked like for mobile users.</figcaption>
-</figure>
+![My website v4 responsive](/assets/images/my_website_v4/Screen_responsive.png "How it looked like for mobile users.")
