--- a/src/pages/posts/raspberry_pi.mdx
+++ b/src/pages/posts/raspberry_pi.mdx
@@ -31,7 +31,5 @@ It is easy to run Python on GNU/Linux, so here it belongs. I just had to make su
 
 This is just a simple Minecraft server running Paper where I can meet with my friends and create structures of our choices. For now, we have been working on recreating our former school where we met.
 
-<figure>
-    <img src="./assets/images/raspberry_pi/Minecraft_render.png" alt="Minecraft render of our former school" />
-    <figcaption>Minecraft render of our former school. (Work in progress)</figcaption>
-</figure>
+
+![Minecraft render of our former school](/assets/images/raspberry_pi/Minecraft_render.png "Minecraft render of our former school. (Work in progress)")
