--- a/src/pages/posts/raspberry_pi.mdx
+++ b/src/pages/posts/raspberry_pi.mdx
@@ -32,4 +32,4 @@ It is easy to run Python on GNU/Linux, so here it belongs. I just had to make su
 This is just a simple Minecraft server running Paper where I can meet with my friends and create structures of our choices. For now, we have been working on recreating our former school where we met.
 
 
-![Minecraft render of our former school](/assets/images/raspberry_pi/Minecraft_render.png "Minecraft render of our former school. (Work in progress)")
+![Minecraft render of our former school](../../assets/raspberry_pi/Minecraft_render.png "Minecraft render of our former school. (Work in progress)")
