Fixed MDX content not visible

--- a/src/pages/posts/anniminder.mdx
+++ b/src/pages/posts/anniminder.mdx
@@ -7,7 +7,7 @@ link: 'https://github.com/TristanB0/Anniminder'
 tags: ["astro", "blogging", "learning in public"]
 ---
 
-## {title}
+## {frontmatter.title}
 
 This project is a reminder of birthdays for Discord servers.
 
