--- a/src/pages/posts/langslater.mdx
+++ b/src/pages/posts/langslater.mdx
@@ -7,7 +7,7 @@ link: 'https://github.com/TristanB0/Langslater'
 tags: ["astro", "blogging", "learning in public"]
 ---
 
-## {title}
+## {frontmatter.title}
 
 This project has for goal to translate every messages which are not in the language selected by Discord server administrators.
 
