--- a/src/pages/posts/my_website_v5.mdx
+++ b/src/pages/posts/my_website_v5.mdx
@@ -7,4 +7,4 @@ link: 'https://github.com/TristanB0/my_website_v5'
 tags: ["astro", "blogging", "learning in public"]
 ---
 
-## {title}
+## {frontmatter.title}
