--- a/src/pages/posts/my_website_v4.mdx
+++ b/src/pages/posts/my_website_v4.mdx
@@ -7,7 +7,7 @@ link: 'https://github.com/TristanB0/mywebsite_v4'
 tags: ["astro", "blogging", "learning in public"]
 ---
 
-## {title}
+## {frontmatter.title}
 
 This is the fourth version of my website I designed entirely. There was an introduction of myself, logos I made and photographs I took throughout my trips. There was also a link to Electrogen', a tech news website where I was an editor.
 
