Rewrote how posts are displayed :)

--- a/src/pages/posts/anniminder.mdx
+++ b/src/pages/posts/anniminder.mdx
@@ -1,10 +1,18 @@
 ---
 layout: ../../layouts/PostLayout.astro
-title: 'Anniminder (Discord Bot)'
-date: 2022-07-01
-description: 'This is the first post of my new Astro blog.'
-link: 'https://github.com/TristanB0/Anniminder'
 tags: ["astro", "blogging", "learning in public"]
+
+title: 'Anniminder (Discord Bot)'
+description: "Discord Bot which reminds people birthdays with a random sentence in the servers he set his birthday or can tell the birthday of someone else if asked by another user."
+image:
+    path: "../../assets/anniminder/anniminder_logo.png"
+    alt: "Logo du bot"
+category: "achievement"
+status: "abandoned"
+from: 2022-07-01
+to: 2022-07-01
+duration: "1 month"
+link: 'https://github.com/TristanB0/Anniminder'
 ---
 
 ## {frontmatter.title}
