--- a/src/pages/posts/langslater.mdx
+++ b/src/pages/posts/langslater.mdx
@@ -1,10 +1,18 @@
 ---
 layout: ../../layouts/PostLayout.astro
-title: 'Langslater (Discord Bot)'
-date: 2022-07-01
-description: 'This is the first post of my new Astro blog.'
-link: 'https://github.com/TristanB0/Langslater'
 tags: ["astro", "blogging", "learning in public"]
+
+title: 'Langslater (Discord Bot)'
+description: "Discord Bot which translates messages which are not in the language selected by the servers' administrators."
+image:
+    path: "../assets/langslater/langslater_logo.png"
+    alt: "Logo du bot"
+category: "achievement"
+status: "in-progress"
+from: 2022-07-01
+to: 2022-07-01
+duration: "1 month"
+link: 'https://github.com/TristanB0/Langslater'
 ---
 
 ## {frontmatter.title}
