--- a/src/pages/posts/logos.mdx
+++ b/src/pages/posts/logos.mdx
@@ -1,10 +1,18 @@
 ---
 layout: ../../layouts/PostLayout.astro
-title: 'Logos'
-date: 2022-07-01
-description: 'This is the first post of my new Astro blog.'
-link: null
 tags: ["astro", "blogging", "learning in public"]
+
+title: 'Langslater (Discord Bot)'
+description: "Some logos I created for fun."
+image:
+    path: ""
+    alt: ""
+category: "achievement"
+status: "completed"
+from: 2022-07-01
+to: 2022-07-01
+duration: "1 month"
+link: null
 ---
 
 ## {frontmatter.title}
