--- a/src/pages/posts/my_website_v4.mdx
+++ b/src/pages/posts/my_website_v4.mdx
@@ -1,10 +1,18 @@
 ---
 layout: ../../layouts/PostLayout.astro
-title: 'My website v4'
-date: 2022-07-01
-description: 'This is the first post of my new Astro blog.'
-link: 'https://github.com/TristanB0/mywebsite_v4'
 tags: ["astro", "blogging", "learning in public"]
+
+title: 'My website v4'
+description: "Fourth version of my website in which I introduce myself and some of my personal projects."
+image:
+    path: "../assets/my_website_v4/Screen_TristanB_en.png"
+    alt: "Visual of my website in v4"
+category: "achievement"
+status: "completed"
+from: 2022-07-01
+to: 2022-07-01
+duration: "1 month"
+link: 'https://github.com/TristanB0/mywebsite_v4'
 ---
 
 ## {frontmatter.title}
