--- a/src/pages/posts/my_website_v5.mdx
+++ b/src/pages/posts/my_website_v5.mdx
@@ -1,10 +1,18 @@
 ---
 layout: ../../layouts/PostLayout.astro
-title: 'My website v5'
-date: 2022-07-01
-description: 'This is the first post of my new Astro blog.'
-link: 'https://github.com/TristanB0/my_website_v5'
 tags: ["astro", "blogging", "learning in public"]
+
+title: 'My website v5'
+description: "The most recent version of my website in which I present my interest for IT and the different projects I have made throughout the years."
+image:
+    path: "../assets/my_website_v5/Screen_TristanB_v5.png"
+    alt: "Screenshot of my website on v5"
+category: "achievement"
+status: "in-progress"
+from: 2022-07-01
+to: 2022-07-01
+duration: "1 month"
+link: 'https://github.com/TristanB0/my_website_v5'
 ---
 
 ## {frontmatter.title}
