--- a/src/pages/posts/q_learning.mdx
+++ b/src/pages/posts/q_learning.mdx
@@ -1,10 +1,18 @@
 ---
 layout: ../../layouts/PostLayout.astro
-title: 'Q-learning (School project)'
-date: 2022-07-01
-description: 'This is the first post of my new Astro blog.'
-link: null
 tags: ["astro", "blogging", "learning in public"]
+
+title: 'Q-learning'
+description: "Making of a game and an IA using the C language and SDL2 to find the exit of a maze via the quickest path."
+image:
+    path: "../../assets/q_learning/player_mode.png"
+    alt: "Screenshot of the game in player mode"
+category: "school-project"
+status: "in-progress"
+from: 2022-06-20
+to: 2022-07-01
+duration: "2 weeks"
+link: null
 ---
 
 ## {frontmatter.title}
