--- a/src/pages/posts/raspberry_pi.mdx
+++ b/src/pages/posts/raspberry_pi.mdx
@@ -1,10 +1,18 @@
 ---
 layout: ../../layouts/PostLayout.astro
-title: 'Raspberry Pi projects'
-date: 2022-07-01
-description: 'This is the first post of my new Astro blog.'
-link: null
 tags: ["astro", "blogging", "learning in public"]
+
+title: 'RaspberryPi Projects'
+description: "Multiples projects realized with a Raspberry Pi."
+image:
+    path: "../assets/raspberry_pi/raspberry_pi_logo.png"
+    alt: "Logo of Raspberry Pi"
+category: "achievement"
+status: "in-progress"
+from: 2022-07-01
+to: 2022-07-01
+duration: "1 month"
+link: null
 ---
 
 ## {frontmatter.title}
