Fixed completion status of 2 projects

--- a/src/pages/posts/q_learning.mdx
+++ b/src/pages/posts/q_learning.mdx
@@ -8,7 +8,7 @@ image:
     path: "../../assets/q_learning/player_mode.png"
     alt: "Screenshot of the game in player mode"
 category: "school-project"
-status: "in-progress"
+status: "completed"
 from: 2022-06-20
 to: 2022-07-01
 duration: "2 weeks"
