--- a/src/pages/posts/raspberry_pi.mdx
+++ b/src/pages/posts/raspberry_pi.mdx
@@ -8,7 +8,7 @@ image:
     path: "../assets/raspberry_pi/raspberry_pi_logo.png"
     alt: "Logo of Raspberry Pi"
 category: "achievement"
-status: "in-progress"
+status: ""
 from: 2022-07-01
 to: 2022-07-01
 duration: "1 month"
