Fix category not correct

--- a/src/pages/posts/logos.mdx
+++ b/src/pages/posts/logos.mdx
@@ -2,7 +2,7 @@
 layout: ../../layouts/PostLayout.astro
 tags: ["astro", "blogging", "learning in public"]
 
-title: 'Langslater (Discord Bot)'
+title: 'Logos'
 description: "Some logos I created for fun."
 image:
     path: ""
