Image optimization when possible

--- a/src/pages/posts/raspberry_pi.mdx
+++ b/src/pages/posts/raspberry_pi.mdx
@@ -14,6 +14,7 @@ to: 2022-07-01
 duration: "1 month"
 link: null
 ---
+import { Image } from "astro:assets";
 
 ## {frontmatter.title}
 
@@ -40,4 +41,9 @@ It is easy to run Python on GNU/Linux, so here it belongs. I just had to make su
 This is just a simple Minecraft server running Paper where I can meet with my friends and create structures of our choices. For now, we have been working on recreating our former school where we met.
 
 
-![Minecraft render of our former school](../../assets/raspberry_pi/Minecraft_render.png "Minecraft render of our former school. (Work in progress)")
+import Minecraft_render from "../../assets/raspberry_pi/Minecraft_render.png";
+
+<figure>
+    <Image src={Minecraft_render} alt="Minecraft render of our former school" />
+    <figcaption>Minecraft render of our former school. (Work in progress)</figcaption>
+</figure>
