--- a/src/pages/posts/my_website_v4.mdx
+++ b/src/pages/posts/my_website_v4.mdx
@@ -14,16 +14,27 @@ to: 2022-07-01
 duration: "1 month"
 link: 'https://github.com/TristanB0/mywebsite_v4'
 ---
+import { Image } from "astro:assets";
 
 ## {frontmatter.title}
 
 This is the fourth version of my website I designed entirely. There was an introduction of myself, logos I made and photographs I took throughout my trips. There was also a link to Electrogen', a tech news website where I was an editor.
 
 
-![My website v4](../../assets/my_website_v4/Screen_TristanB_en.png "Glimpse of what it looked like.")
+import Screen_TristanB_en from "../../assets/my_website_v4/Screen_TristanB_en.png";
+
+<figure>
+    <Image src={Screen_TristanB_en} alt="My website screen in v4" />
+    <figcaption>Glimpse of what it looked like.</figcaption>
+</figure>
 
 
 It was also the first time I tried to make it responsive, so that the UI changed for tablet users and mobile users.
 
 
-![My website v4 responsive](../../assets/my_website_v4/Screen_responsive.png "How it looked like for mobile users.")
+import Screen_responsive from "../../assets/my_website_v4/Screen_responsive.png";
+
+<figure>
+    <Image src={Screen_responsive} alt="My website v4 responsive" />
+    <figcaption>How it looked like for mobile users.</figcaption>
+</figure>
