--- a/src/pages/posts/q_learning.mdx
+++ b/src/pages/posts/q_learning.mdx
@@ -14,28 +14,49 @@ to: 2022-07-01
 duration: "2 weeks"
 link: null
 ---
+import { Image } from "astro:assets";
 
 ## {frontmatter.title}
 
 This is the project we had to do at the end of our first year of engineering school in teams of 3. The goal was to build a game using the C language and SDL2 and then build a Q-learning algorithm (here: double-Q-learning) to learn solving the game.
 
 
-![IA learning](../../assets/q_learning/ia_learning.gif "The IA at its first stages of learning.")
+import ia_learning from "../../assets/q_learning/ia_learning.gif";
+
+<figure>
+    <Image src={ia_learning} alt="IA learning" />
+    <figcaption>The IA at its first stages of learning.</figcaption>
+</figure>
 
 
 Our game is a maze with multiple paths, devided in two parts, to get to the exit, but there is a passage at the center which is mandatory to get to the second part of the game. There are also ennemies located in mutiples dead ends and crossing their line of sight is a game over.
 
 
-![IA not optimal](../../assets/q_learning/ia_not_optimal_path.gif "The IA finds the exit but not via the optimal way.")
+import ia_not_optimal_path from "../../assets/q_learning/ia_not_optimal_path.gif";
+
+<figure>
+    <Image src={ia_not_optimal_path} alt="IA not optimal" />
+    <figcaption>The IA finds the exit but not via the optimal way.</figcaption>
+</figure>
 
 
 One of the challenge is to find the correct balance of settings for it to learn efficiently. An other challenge is to chose the right perceptions of the IA. In our case, we decided it could see 4 cases around it <code>(UP, RIGHT, DOWN, LEFT)</code> and that he could not go back except in case of a dead end.
 
 
-![IA best path](../../assets/q_learning/ia_best_path.gif "The IA after it learned during enough time.")
+import ia_best_path from "../../assets/q_learning/ia_best_path.gif";
+
+<figure>
+    <Image src={ia_best_path} alt="IA best path" />
+    <figcaption>The IA after it learned during enough time.</figcaption>
+</figure>
 
 
 We also added a gamemode where the player could solve the maze by himself and we integrated the whole through a menu.
 
 
-![player mode](../../assets/q_learning/player_mode.png "Images of the player mode with updated graphics.")
+import player_mode from "../../assets/q_learning/player_mode.png";
+
+<figure>
+    <Image src={player_mode} alt="player mode" />
+    <figcaption>Images of the player mode with updated graphics.</figcaption>
+</figure>
