Fix images on cards

--- a/src/pages/posts/anniminder.mdx
+++ b/src/pages/posts/anniminder.mdx
@@ -5,7 +5,7 @@ tags: ["astro", "blogging", "learning in public"]
 title: 'Anniminder (Discord Bot)'
 description: "Discord Bot which reminds people birthdays with a random sentence in the servers he set his birthday or can tell the birthday of someone else if asked by another user."
 image:
-    path: "../../assets/anniminder/anniminder_logo.png"
+    path: "/images/card/anniminder.png"
     alt: "Logo du bot"
 category: "achievement"
 status: "abandoned"
