--- a/src/pages/posts/langslater.mdx
+++ b/src/pages/posts/langslater.mdx
@@ -5,7 +5,7 @@ tags: ["astro", "blogging", "learning in public"]
 title: 'Langslater (Discord Bot)'
 description: "Discord Bot which translates messages which are not in the language selected by the servers' administrators."
 image:
-    path: "../assets/langslater/langslater_logo.png"
+    path: "/images/card/langslater.png"
     alt: "Logo du bot"
 category: "achievement"
 status: "in-progress"
