--- a/src/pages/posts/my_website_v5.mdx
+++ b/src/pages/posts/my_website_v5.mdx
@@ -5,7 +5,7 @@ tags: ["astro", "blogging", "learning in public"]
 title: 'My website v5'
 description: "The most recent version of my website in which I present my interest for IT and the different projects I have made throughout the years."
 image:
-    path: "../assets/my_website_v5/Screen_TristanB_v5.png"
+    path: "/images/card/website_v5.png"
     alt: "Screenshot of my website on v5"
 category: "achievement"
 status: "in-progress"
