--- a/src/pages/posts/q_learning.mdx
+++ b/src/pages/posts/q_learning.mdx
@@ -5,7 +5,7 @@ tags: ["astro", "blogging", "learning in public"]
 title: 'Q-learning'
 description: "Making of a game and an IA using the C language and SDL2 to find the exit of a maze via the quickest path."
 image:
-    path: "../../assets/q_learning/player_mode.png"
+    path: "/images/card/q_learning.png"
     alt: "Screenshot of the game in player mode"
 category: "school-project"
 status: "completed"
