--- a/src/pages/posts/raspberry_pi.mdx
+++ b/src/pages/posts/raspberry_pi.mdx
@@ -2,10 +2,10 @@
 layout: ../../layouts/PostLayout.astro
 tags: ["astro", "blogging", "learning in public"]
 
-title: 'RaspberryPi Projects'
+title: 'Raspberry Pi Projects'
 description: "Multiples projects realized with a Raspberry Pi."
 image:
-    path: "../assets/raspberry_pi/raspberry_pi_logo.png"
+    path: "/images/card/raspberry_pi_logo.png"
     alt: "Logo of Raspberry Pi"
 category: "achievement"
 status: ""
