--- a/src/pages/posts/my_website_v4.mdx
+++ b/src/pages/posts/my_website_v4.mdx
@@ -5,7 +5,7 @@ tags: ["astro", "blogging", "learning in public"]
 title: 'My website v4'
 description: "Fourth version of my website in which I introduce myself and some of my personal projects."
 image:
-    path: "../assets/my_website_v4/Screen_TristanB_en.png"
+    path: "/images/card/website_v4.png"
     alt: "Visual of my website in v4"
 category: "achievement"
 status: "completed"
