Add maintenance status

--- a/src/pages/posts/invivoo.mdx
+++ b/src/pages/posts/invivoo.mdx
@@ -8,7 +8,7 @@ image:
     path: ""
     alt: ""
 category: "experience"
-status: "completed"
+status: ""
 from: 2023-04-03
 to: 2023-08-28
 duration: "4 months"
