--- a/src/pages/posts/langslater.mdx
+++ b/src/pages/posts/langslater.mdx
@@ -8,7 +8,7 @@ image:
     path: "/images/card/langslater.png"
     alt: "Logo du bot"
 category: "achievement"
-status: "in-progress"
+status: "maintenance"
 from: 2022-07-01
 to: 2022-07-01
 duration: "1 month"
