--- a/src/pages/posts/invivoo.mdx
+++ b/src/pages/posts/invivoo.mdx
@@ -1,18 +1,17 @@
 ---
 layout: ../../layouts/PostLayout.astro
-tags: ["astro", "blogging", "learning in public"]
 
 title: 'INVIVOO Internship'
-description: ""
+description: "Matching project between CVs and call for tenders done for and at the company INVIVOO."
 image:
-    path: ""
-    alt: ""
+    path: "/images/card/invivoo.png"
+    alt: 'Invivoo logo with moto "Beyond Tech"'
 category: "experience"
-status: ""
+status: null
 from: 2023-04-03
 to: 2023-08-28
 duration: "4 months"
 link: null
 ---
 
-## {frontmatter.title}
+## {frontmatter.title} (Work in progress)
