--- a/src/pages/posts/logos.mdx
+++ b/src/pages/posts/logos.mdx
@@ -1,21 +1,20 @@
 ---
 layout: ../../layouts/PostLayout.astro
-tags: ["astro", "blogging", "learning in public"]
 
 title: 'Logos'
-description: "Some logos I created for fun."
+description: "Some logos I created when it was my hobby."
 image:
     path: ""
     alt: ""
 category: "achievement"
 status: "completed"
-from: 2022-07-01
-to: 2022-07-01
-duration: "1 month"
+from: null
+to: null
+duration: null
 link: null
 ---
 
-## {frontmatter.title}
+## {frontmatter.title} (Work in progress)
 
 One of the first thing I did with a computer is drawing. When I learned about advanced tools, I started making logos for my own use for fun. I do not consider myself an artist, quite the contrary, but I like my ideas and what I have done with them. What follows are my attempts to do logos for different reasons.
 
