--- a/src/pages/posts/my_website_v5.mdx
+++ b/src/pages/posts/my_website_v5.mdx
@@ -1,18 +1,17 @@
 ---
 layout: ../../layouts/PostLayout.astro
-tags: ["astro", "blogging", "learning in public"]
 
 title: 'My website v5'
-description: "The most recent version of my website in which I present my interest for IT and the different projects I have made throughout the years."
+description: "The most recent version of my website in which I present my interest for IT and the different projects I have made throughout the years as well as some professional experiences."
 image:
     path: "/images/card/website_v5.png"
     alt: "Screenshot of my website on v5"
 category: "achievement"
 status: "in-progress"
-from: 2022-07-01
-to: 2022-07-01
-duration: "1 month"
+from: 2022-02-02
+to: null
+duration: null
 link: 'https://github.com/TristanB0/my_website_v5'
 ---
 
-## {frontmatter.title}
+## {frontmatter.title} (Work in progress)
