--- a/src/pages/posts/my_website_v4.mdx
+++ b/src/pages/posts/my_website_v4.mdx
@@ -1,40 +1,40 @@
 ---
 layout: ../../layouts/PostLayout.astro
-tags: ["astro", "blogging", "learning in public"]
 
 title: 'My website v4'
-description: "Fourth version of my website in which I introduce myself and some of my personal projects."
+description: "Fourth version of my website in which I introduce myself and some things I worked on."
 image:
     path: "/images/card/website_v4.png"
     alt: "Visual of my website in v4"
 category: "achievement"
 status: "completed"
-from: 2022-07-01
-to: 2022-07-01
-duration: "1 month"
+from: 2019-01-12
+to: 2019-04-27
+duration: "3 months"
 link: 'https://github.com/TristanB0/mywebsite_v4'
 ---
 import { Image } from "astro:assets";
 
 ## {frontmatter.title}
 
-This is the fourth version of my website I designed entirely. There was an introduction of myself, logos I made and photographs I took throughout my trips. There was also a link to Electrogen', a tech news website where I was an editor.
+This is the fourth version of my website, which I designed entirely from scratch. There is an introduction of myself, logos I made and photographs I took throughout my trips. There is also a link to Electrogen', a tech news website where I was an editor.
 
+Everything is made so it would fit on a single page.
 
 import Screen_TristanB_en from "../../assets/my_website_v4/Screen_TristanB_en.png";
 
 <figure>
     <Image src={Screen_TristanB_en} alt="My website screen in v4" />
-    <figcaption>Glimpse of what it looked like.</figcaption>
+    <figcaption>Glimpse of what it looks like.</figcaption>
 </figure>
 
 
-It was also the first time I tried to make it responsive, so that the UI changed for tablet users and mobile users.
+It is also the first time I tried to make it responsive, so that the UI is adapted for tablet users and mobile users.
 
 
 import Screen_responsive from "../../assets/my_website_v4/Screen_responsive.png";
 
 <figure>
-    <Image src={Screen_responsive} alt="My website v4 responsive" />
-    <figcaption>How it looked like for mobile users.</figcaption>
+    <Image src={Screen_responsive} alt="My website v4 on mobile" />
+    <figcaption>How it looks like for mobile users.</figcaption>
 </figure>
