--- a/src/pages/posts/raspberry_pi.mdx
+++ b/src/pages/posts/raspberry_pi.mdx
@@ -1,6 +1,5 @@
 ---
 layout: ../../layouts/PostLayout.astro
-tags: ["astro", "blogging", "learning in public"]
 
 title: 'Raspberry Pi Projects'
 description: "Multiples projects realized with a Raspberry Pi."
@@ -8,10 +7,10 @@ image:
     path: "/images/card/raspberry_pi_logo.png"
     alt: "Logo of Raspberry Pi"
 category: "achievement"
-status: ""
-from: 2022-07-01
-to: 2022-07-01
-duration: "1 month"
+status: null
+from: null
+to: null
+duration: null
 link: null
 ---
 import { Image } from "astro:assets";
@@ -21,22 +20,22 @@ import { Image } from "astro:assets";
 This page lists all the projects I have made using a Raspberry Pi. They were very interesting to understand how some part of the Internet work. It's also pretty useful to be able to access it anytime and anywhere to learn setting up everything. Moreover, I installed the Raspberry Pi OS Lite (64-bit) to optimize performances and to use it such as a server.
 
 
-- Host my website
+### Host my website
 
 My website runs on the Raspberry Pi thanks to Apache HTTP Server, and since I have my own domain name, I learned to configure DDNS (currently only with IPv4) and other settings such as redirections or subdomains. I installed an SSL certificate from Let's Encrypt to understand how it works and to protect my information of BitWarden and GitLab, which I also plan to self-host.
 
 
-- Host a VPN and an ad and tracker-blocking application
+### Host a VPN and an ad and tracker-blocking application
 
 I wanted to be able to access the french content of services even when I was abroad and add security on public networks, so I installed a VPN which is running WireGuard. Moreover, I installed Pi-hole for even more privacy. It is a network-level advertisement and Internet tracker blocking application that is accessed by setting up the Pi local IP address in the DNS section of a computer.
 
 
-- Host my Discord bots
+### Host my Discord bots
 
 It is easy to run Python on GNU/Linux, so here it belongs. I just had to make sure I installed every libraries needed.
 
 
-- Host a Minecraft server
+### Host a Minecraft server
 
 This is just a simple Minecraft server running Paper where I can meet with my friends and create structures of our choices. For now, we have been working on recreating our former school where we met.
 
