Added link to project on project page + Fixed light/dark toggle default

--- a/src/pages/posts/my_website_v5.mdx
+++ b/src/pages/posts/my_website_v5.mdx
@@ -14,4 +14,4 @@ duration: null
 link: 'https://github.com/TristanB0/my_website_v5'
 ---
 
-## {frontmatter.title} (Work in progress)
+(Work in progress)
