More image optimization

--- a/src/pages/posts/anniminder.mdx
+++ b/src/pages/posts/anniminder.mdx
@@ -4,7 +4,7 @@ layout: ../../layouts/PostLayout.astro
 title: 'Anniminder (Discord Bot)'
 description: "Discord Bot which reminds people birthdays with a random sentence in the servers he set his birthday, or can tell the birthday of someone else if asked by another user."
 image:
-    path: "/images/card/anniminder.png"
+    path: "/src/assets/card/anniminder.png"
     alt: "Logo du bot"
 category: "achievement"
 status: "discontinued"
