--- a/src/pages/posts/invivoo.mdx
+++ b/src/pages/posts/invivoo.mdx
@@ -4,7 +4,7 @@ layout: ../../layouts/PostLayout.astro
 title: 'INVIVOO Internship'
 description: "Matching project between CVs and call for tenders done for and at the company INVIVOO."
 image:
-    path: "/images/card/invivoo.png"
+    path: "/src/assets/card/invivoo.png"
     alt: 'Invivoo logo with moto "Beyond Tech"'
 category: "experience"
 status: null
