--- a/src/pages/posts/langslater.mdx
+++ b/src/pages/posts/langslater.mdx
@@ -4,7 +4,7 @@ layout: ../../layouts/PostLayout.astro
 title: 'Langslater (Discord Bot)'
 description: "Discord Bot which translates messages which are not in the language selected by the servers' administrators."
 image:
-    path: "/images/card/langslater.png"
+    path: "/src/assets/card/langslater.png"
     alt: "Logo du bot"
 category: "achievement"
 status: "maintenance"
