--- a/src/pages/posts/logos.mdx
+++ b/src/pages/posts/logos.mdx
@@ -4,8 +4,8 @@ layout: ../../layouts/PostLayout.astro
 title: 'Logos'
 description: "Some logos I created when it was my hobby."
 image:
-    path: ""
-    alt: ""
+    path: null
+    alt: null
 category: "achievement"
 status: "completed"
 from: null
