--- a/src/pages/posts/my_website_v4.mdx
+++ b/src/pages/posts/my_website_v4.mdx
@@ -4,7 +4,7 @@ layout: ../../layouts/PostLayout.astro
 title: 'My website v4'
 description: "Fourth version of my website in which I introduce myself and some things I worked on."
 image:
-    path: "/images/card/website_v4.png"
+    path: "/src/assets/card/website_v4.png"
     alt: "Visual of my website in v4"
 category: "achievement"
 status: "completed"
