--- a/src/pages/posts/q_learning.mdx
+++ b/src/pages/posts/q_learning.mdx
@@ -4,7 +4,7 @@ layout: ../../layouts/PostLayout.astro
 title: 'Q-learning'
 description: "Making of a game and an IA using the C language and SDL2 to find the exit of a maze via the quickest path."
 image:
-    path: "/images/card/q_learning.png"
+    path: "/src/assets/card/q_learning.png"
     alt: "Screenshot of the game in player mode"
 category: "school-project"
 status: "completed"
