--- a/src/pages/posts/my_website_v5.mdx
+++ b/src/pages/posts/my_website_v5.mdx
@@ -4,7 +4,7 @@ layout: ../../layouts/PostLayout.astro
 title: 'My website v5'
 description: "The most recent version of my website in which I present my interest for IT and the different projects I have made throughout the years as well as some professional experiences."
 image:
-    path: "/images/card/website_v5.png"
+    path: "/src/assets/card/website_v5.png"
     alt: "Screenshot of my website on v5"
 category: "achievement"
 status: "in-progress"
